# langchain-util

./: README.md  pyproject.toml
docs/integrations/adapters/: aws_bedrock_adapter.ipynb
prompt_configs/pod_protocol/: config.json  prompt.txt
prompt_configs/techtype_rocket/: config.json  prompt.txt
rqle_ai_langchain_util/: settings.py
rqle_ai_langchain_util/apps/pod_protocol/: pod_protocol.py
rqle_ai_langchain_util/apps/techtype_rocket/: techtype_rocket.py  techtype_rocket_ui.py
rqle_ai_langchain_util/llms/: llm_mediator.py
rqle_ai_langchain_util/llms/adapters/: aws_bedrock_adapter.py  ollama_adapter.py
rqle_ai_langchain_util/prompts/: prompt_config.py
rqle_ai_langchain_util/utils/: file_util.py
tests/llms/: test_llm_mediator.py
tests/llms/adapters/: test_aws_bedrock_adapter.py  test_ollama_adapter.py
